--- a/İndex.html
+++ b/İndex.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
+
+    <!-- Google font -->
+
+    <!-- Font Awesome 6 -->
+
+    <!-- Tailwind css CDN -->
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
 </head>
 <body>
     
