--- a/İndex.html
+++ b/İndex.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- For Language -->
     <meta charset="UTF-8">
+    <!-- For Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <!-- For Title -->
+    <title>Tailwind Css Tutorial</title>
     <link rel="stylesheet" href="./output.css">
 
-    <!-- Google font -->
+    <!-- Google Roboto font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <!-- Google Spicy Rice Static Font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spicy+Rice&display=swap" rel="stylesheet">
 
     <!-- Font Awesome 6 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Tailwind css CDN -->
-    
+    <!-- Tailwind Css CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+     <!-- Tailwind output Css config -->
+    <link rel="stylesheet" href="./output.css">
 
 
 </head>
 <body>
-    
+    <!-- Start Code -->
+   <p class="text-tutorialFont-green">Tailwind Tutorial - Hello Tailwind</p>
+   <p class="font-tailwindtutorialFontdeneme">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis fugit commodi atque at recusandae culpa cupiditate minima dolor harum ipsam est earum possimus ratione, quibusdam illum? Explicabo dignissimos quia neque?</p>
+
+    <!-- End Code -->
 </body>
 </html>
