--- a/İndex.html
+++ b/İndex.html
@@ -33,6 +33,8 @@
 <body>
     <!-- Start Code -->
    <p class="text-tutorialFont-green">Tailwind Tutorial - Hello Tailwind</p>
+   <p>Raw - Hello Tailwind</p>
+   <p class="font-tutorialFont">Font Roboto - Hello Tailwind</p>
    <p class="font-tailwindtutorialFontdeneme">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis fugit commodi atque at recusandae culpa cupiditate minima dolor harum ipsam est earum possimus ratione, quibusdam illum? Explicabo dignissimos quia neque?</p>
 
     <!-- End Code -->
