textcolor_backgroundcolor_textfont_added

--- a/İndex.html
+++ b/İndex.html
@@ -32,9 +32,30 @@
 </head>
 <body>
     <!-- Start Code -->
+     <!-- TEXT -->
+     <p class="text-tutorialFont-green hover:text-fuchsia-600 hover:bg-black text-center font-bold">Text Hover</p>
+      <p class="uppercase">uppercase</p>
+      <p class="lowercase">lowercase</p>
+      <p class="italic">italic</p>
+      <p class="capitalize">capitalize</p>
+      <p class="font-bold">font-bold</p>
+      <p class="text-xs">xs Text</p>
+      <p class="text-lg">lg Text</p>
+      <p class="text-start">text-start</p>
+      <p class="text-center">text-center</p>
+      <p class="text-end">text-end</p>
+     <!-- Background and text color -->
+     <p class="text-gray-500">Color</p>
+     <p class="text-red-600">Color</p>
+     <p class="text-yellow-600">Color</p>
+     <p class="bg-orange-600">Background Color</p>
+     <p class="bg-purple-600">Background Color</p>
    <p class="text-tutorialFont-green">Tailwind Tutorial - Hello Tailwind</p>
+</br>
    <p>Raw - Hello Tailwind</p>
+</br>
    <p class="font-tutorialFont">Font Roboto - Hello Tailwind</p>
+</br>
    <p class="font-tailwindtutorialFontdeneme">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis fugit commodi atque at recusandae culpa cupiditate minima dolor harum ipsam est earum possimus ratione, quibusdam illum? Explicabo dignissimos quia neque?</p>
 
     <!-- End Code -->
