Adjust borders and padding

--- a/İndex.html
+++ b/İndex.html
@@ -32,10 +32,15 @@
 </head>
 <body>
     <!-- Start Code -->
+    <!-- Border, Rounded, Shadow, Margin, Padding -->
+    <br>
+   <p class="border-3 border-blue-700 m-5 p-3 text-center bg-black shadow-lg rounded-md text-white hover:bg-white hover:text-purple-500 italic font-bold">Border</p>
+   <hr>
+   <hr>
      <!-- TEXT -->
      <p class="text-tutorialFont-green hover:text-fuchsia-600 hover:bg-black text-center font-bold">Text Hover</p>
-      <p class="uppercase">uppercase</p>
-      <p class="lowercase">lowercase</p>
+      <p class="uppercase border-2 border-dashed border-red-500">uppercase</p>
+      <p class="lowercase bg-yellow-300">lowercase</p>
       <p class="italic">italic</p>
       <p class="capitalize">capitalize</p>
       <p class="font-bold">font-bold</p>
