button-link-display eklendi

--- a/İndex.html
+++ b/İndex.html
@@ -32,9 +32,18 @@
 </head>
 <body>
     <!-- Start Code -->
+     <!-- Display -->
+      <a href="#" class="inline">Link 1</a>
+      <a href="#" class="block">Link 2</a>
+      <a href="#" class="inline-block">Link 3</a>
+      <a href="#" class="block md:hidden">Link 4</a>
+     <!-- LİNK -->
+      <a href="#" class="text-tutorialFont-green bg-black hover:text-white hover:bg-amber-400 rounded-lg font-bold p-2 m-2">Link</a>
+     <!-- Button -->
+     <button class="text-tutorialFont-green bg-black hover:text-white hover:bg-amber-400 rounded-lg font-bold p-2 m-2">Button-1</button>
     <!-- Border, Rounded, Shadow, Margin, Padding -->
     <br>
-   <p class="border-3 border-blue-700 m-5 p-3 text-center bg-black shadow-lg rounded-md text-white hover:bg-white hover:text-purple-500 italic font-bold">Border</p>
+   <p class="border-3 border-blue-700 text-center bg-black shadow-lg rounded-md text-white hover:bg-amber-400 hover:text-purple-500 italic font-bold p-5 m-3">Border</p>
    <hr>
    <hr>
      <!-- TEXT -->
