--- a/İndex.html
+++ b/İndex.html
@@ -32,6 +32,53 @@
 </head>
 <body>
     <!-- Start Code -->
+     <!-- Table -->
+      <table class="min-w-full divede-y divide-text-tutorialFont-green">
+         <thead>
+            <tr>
+               <th class="bg-black text-white text-sm leading-5 px-7 py-4">ID</th>
+               <th class="bg-black text-white text-sm leading-5 px-7 py-4">ADI</th>
+               <th class="bg-black text-white text-sm leading-5 px-7 py-4">SOYADI</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <td class="px-5 whitespace-nowrap">1</td>
+               <td class="px-5 whitespace-nowrap">ADI-1</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+            </tr>
+            <tr>
+               <td class="px-5 whitespace-nowrap">1</td>
+               <td class="px-5 whitespace-nowrap">ADI-1</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+            </tr>
+            <tr>
+               <td class="px-5 whitespace-nowrap">1</td>
+               <td class="px-5 whitespace-nowrap">ADI-1</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+            </tr>
+            <tr>
+               <td class="px-5 whitespace-nowrap">1</td>
+               <td class="px-5 whitespace-nowrap">ADI-1</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+            </tr>
+            <tr>
+               <td class="px-5 whitespace-nowrap">1</td>
+               <td class="px-5 whitespace-nowrap">ADI-1</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+            </tr>
+         </tbody>
+      </table>
+       <!-- Height -->
+       <div class="h-20 mb-14 bg-red-600 text-black">20px Yükseklik</div>
+
+       <div class="h-screen mb-14 bg-red-600 text-black">Ekran Yüksekliği</div>
+     <!-- Width -->
+      <div class="w-60 mb-14 bg-red-600 text-black">60px Genişlik</div>
+      <div class="w-1/2 mb-14 bg-red-600 text-black">Yarım ekran genişliği</div>
+      <div class="w-full mb-14 bg-red-600 text-black">Full Genişlik</div>
+      <div class="w-auto mb-14 bg-red-600 text-black">Auto Genişlik</div>
+      <div class="w-screen mb-14 bg-red-600 text-black">Ekran Genişliği</div>
     <!-- Border, Rounded, Shadow, Margin, Padding -->
     <br>
    <p class="border-3 border-blue-700 m-5 p-3 text-center bg-black shadow-lg rounded-md text-white hover:bg-white hover:text-purple-500 italic font-bold">Border</p>
