Alert-LIST-added

--- a/İndex.html
+++ b/İndex.html
@@ -30,8 +30,30 @@
 
 
 </head>
-<body>
+<body class="container">
     <!-- Start Code -->
+     <!-- ALERT -->
+      <div class="bg-yellow-100 text-yellow-800 p-5 border-red-600 border-l-4">
+         <p class="font-bold">UYARI</p>
+         <p>Adınızı girmediniz</p>
+      </div>
+   </br></br>
+     <!-- LIST -->
+    <ol class="list-decimal">
+      <li class="mb-3">item-1</li>
+      <li class="mb-3">item-2</li>
+      <li class="mb-3">item-3</li>
+      <li class="mb-3">item-4</li>
+      <li class="mb-3">item-5</li>
+    </ol>
+</br>
+    <ul class="list-disc">
+      <li class="mb-3">item-1</li>
+      <li class="mb-3">item-2</li>
+      <li class="mb-3">item-3</li>
+      <li class="mb-3">item-4</li>
+      <li class="mb-3">item-5</li>
+    </ul>
      <!-- Table -->
       <table class="min-w-full divede-y divide-text-tutorialFont-green">
          <thead>
@@ -48,24 +70,24 @@
                <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
             </tr>
             <tr>
-               <td class="px-5 whitespace-nowrap">1</td>
-               <td class="px-5 whitespace-nowrap">ADI-1</td>
-               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+               <td class="px-5 whitespace-nowrap">2</td>
+               <td class="px-5 whitespace-nowrap">ADI-2</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-2</td>  
             </tr>
             <tr>
-               <td class="px-5 whitespace-nowrap">1</td>
-               <td class="px-5 whitespace-nowrap">ADI-1</td>
-               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+               <td class="px-5 whitespace-nowrap">3</td>
+               <td class="px-5 whitespace-nowrap">ADI-3</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-3</td>  
             </tr>
             <tr>
-               <td class="px-5 whitespace-nowrap">1</td>
-               <td class="px-5 whitespace-nowrap">ADI-1</td>
-               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+               <td class="px-5 whitespace-nowrap">4</td>
+               <td class="px-5 whitespace-nowrap">ADI-4</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-4</td>  
             </tr>
             <tr>
-               <td class="px-5 whitespace-nowrap">1</td>
-               <td class="px-5 whitespace-nowrap">ADI-1</td>
-               <td class="px-5 whitespace-nowrap">SOYADI-1</td>  
+               <td class="px-5 whitespace-nowrap">5</td>
+               <td class="px-5 whitespace-nowrap">ADI-5</td>
+               <td class="px-5 whitespace-nowrap">SOYADI-5</td>  
             </tr>
          </tbody>
       </table>
