--- a/İndex.html
+++ b/İndex.html
@@ -32,6 +32,37 @@
 </head>
 <body class="container">
     <!-- Start Code -->
+     <!-- SPINNER/FORM -->
+       <h3 class="text-center text-purple-500 uppercase ">Form</h3>
+      <form action="##" method="get" autocomplete="on" class="w-full max-w-sm"></form>
+      <!-- Email -->
+      <div class="flex items-center bg-transparent border-b-2 border-blue-500">
+         <input 
+         type="text" 
+         placeholder="Email giriniz" 
+         required title="Email giriniz"
+         id="uemail"
+         name="uemail"
+         class="bg-transparent border-b-2 border-black text-black p-2 m-2 w-full rounded focus:outline-none focus:border-red-500"
+         >
+      </div>
+         <!-- Password -->
+         <div class="flex items-center bg-transparent border-b-2 border-blue-500">
+            <input 
+            type="password" 
+            placeholder="Sifre giriniz" 
+            required title="Sifre alani"
+            id="upassword"
+            name="upassword"
+            class="bg-transparent border-b-2 border-black text-black p-2 m-2 w-full rounded focus:outline-none focus:border-red-500"
+            >
+         </div>
+         <Button class="flex-shrink p-3 shadow-lg rounded bg-blue-500 hover:bg-red-700 text-black border-black" type="reset">Temizle</Button>
+         <div class="flex items-center justify-center h-screen">
+            <div class="animate-spin rounded-full border-t-4 border-opacity-35 h-12 w-12"></div>
+         </div>
+         <Button class="flex-shrink p-3 shadow-lg  bg-blue-500 hover:bg-red-700 text-black border-black" type="submit">Gönder</Button>
+
      <!-- ALERT -->
       <div class="bg-yellow-100 text-yellow-800 p-5 border-red-600 border-l-4">
          <p class="font-bold">UYARI</p>
