Const,Let,Var,Hoisting,console.error,warn,info,log,alert_and_window.alert

--- a/Tailwindtutorial/İndex.html
+++ b/Tailwindtutorial/İndex.html
@@ -39,7 +39,7 @@
             <h2 class="font-bold text-3xl">Selamlar FLEX</h2>
             <div class="flex space-x-5"></div>
             <div class="flex-sm-shrink-1">
-               <img src="./images/avatar.webp" class="w-21 h-21 rounded-lg" alt="">
+               <img src="../images/avatar.webp" class="w-21 h-21 rounded-lg" alt="">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas saepe asperiores iure ipsa rerum aspernatur eveniet, labore quasi officia laborum adipisci. Ad quisquam iusto ratione iure voluptatem voluptas aut vel?
             Officia repellendus voluptatum rerum quidem ullam doloribus magnam nihil repellat consequuntur quo ut cupiditate aliquam, optio fugiat modi delectus voluptates deleniti. Ad possimus accusantium unde illum nulla saepe dignissimos beatae.</p>
