--- a/Javascripttutorial/_1_js tutorials/javascriptutorial.html
+++ b/Javascripttutorial/_1_js tutorials/javascriptutorial.html
@@ -33,7 +33,7 @@
 <body class="container">
     <!-- Start Code -->
 
-    <button>Click Event</button>
+    <!-- <button>Click Event</button>
      <p id="parag_id">Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
      <button id="dom_button" onclick="parag_change()">DOM BUTTON</button>
     <h1 class="text-5xl text-center">Javascript Tutorial</h1>
@@ -41,7 +41,7 @@
     <button class="butonlar" ondblclick="greetings()">Double click Event</button>
     <button class="butonlar" onmouseover="greetings()">Mouseover Event</button>
     <button class="butonlar" onkeyup="greetings()">Onkeyup Event</button>
-    <button class="butonlar" onkeydown="greetings()">Onkeydown Event</button>
+    <button class="butonlar" onkeydown="greetings()">Onkeydown Event</button> -->
 
     <!-- <script>alert("Internal js")</script> -->
 
