--- a/Javascripttutorial/_1_js tutorials/javascriptutorial.html
+++ b/Javascripttutorial/_1_js tutorials/javascriptutorial.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- For Title -->
     <title>Javascript Css Tutorial</title>
-    <link rel="stylesheet" href="../Tailwindtutorial/output.css">
+    <link rel="stylesheet" href="../../Tailwindtutorial/output.css">
 
     <!-- Google Roboto font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
